--- a/work_phase_3/css/components.css
+++ b/work_phase_3/css/components.css
@@ -13,10 +13,10 @@
 
 
 .sitemap h1 {
-    font-size: 2rem;
-    font-style: bold;
+    /* font-size: 2rem;
+    font-style: bold; */
     margin-top: 2rem;
-    margin-bottom: 2rem;
+    /* margin-bottom: 2rem; */
 }
 
 .sitemap img {
