--- a/work_phase_3/css/page_css/visceral_design.css
+++ b/work_phase_3/css/page_css/visceral_design.css
@@ -43,7 +43,11 @@
     background-color: var(--secondary-color);
 }
 
-.accent-color {
+.accent-color-bg {
+    background-color: var(--accent-bg);
+}
+
+.accent-color-text {
     background-color: var(--accent-color);
 }
 
