feat: init behavioral page

--- a/work_phase_3/css/components.css
+++ b/work_phase_3/css/components.css
@@ -30,8 +30,7 @@
 }
 
 .breadcrumbs-link {
-    font-size: 1rem;
-    margin-bottom: 1rem;
+    padding-top: 2rem;
 }
 
 .breadcrumbs-link a {
@@ -43,8 +42,8 @@
     font-weight: bold;
 }
 
-@media (min-width: 768px) {
+/* @media (min-width: 768px) {
     .breadcrumbs-link {
         display: none
     }
-}
+} */
