--- a/work_phase_3/css/page_css/visceral_design.css
+++ b/work_phase_3/css/page_css/visceral_design.css
@@ -55,6 +55,10 @@
     background-color: var(--text-color);
 }
 
+.text-color-dark {
+    background-color: var(--text-on-dark);
+}
+
 .background-color {
     background-color: var(--background-color);
     border: 2px solid #ddd;
