--- a/work_phase_4/css/layout.css
+++ b/work_phase_4/css/layout.css
@@ -102,344 +102,344 @@
 }
 
 /* Margin top */
-.m-t-0 {
+.mt-0 {
     margin-top: var(--spacing-0);
 }
 
-.m-t-1 {
+.mt-1 {
     margin-top: var(--spacing-1);
 }
 
-.m-t-2 {
+.mt-2 {
     margin-top: var(--spacing-2);
 }
 
-.m-t-3 {
+.mt-3 {
     margin-top: var(--spacing-3);
 }
 
-.m-t-4 {
+.mt-4 {
     margin-top: var(--spacing-4);
 }
 
-.m-t-5 {
+.mt-5 {
     margin-top: var(--spacing-5);
 }
 
-.m-t-6 {
+.mt-6 {
     margin-top: var(--spacing-6);
 }
 
-.m-t-8 {
+.mt-8 {
     margin-top: var(--spacing-8);
 }
 
-.m-t-10 {
+.mt-10 {
     margin-top: var(--spacing-10);
 }
 
-.m-t-12 {
+.mt-12 {
     margin-top: var(--spacing-12);
 }
 
-.m-t-16 {
+.mt-16 {
     margin-top: var(--spacing-16);
 }
 
-.m-t-20 {
+.mt-20 {
     margin-top: var(--spacing-20);
 }
 
-.m-t-24 {
+.mt-24 {
     margin-top: var(--spacing-24);
 }
 
-.m-t-32 {
+.mt-32 {
     margin-top: var(--spacing-32);
 }
 
 /* Margin bottom */
-.m-b-0 {
+.mb-0 {
     margin-bottom: var(--spacing-0);
 }
 
-.m-b-1 {
+.mb-1 {
     margin-bottom: var(--spacing-1);
 }
 
-.m-b-2 {
+.mb-2 {
     margin-bottom: var(--spacing-2);
 }
 
-.m-b-3 {
+.mb-3 {
     margin-bottom: var(--spacing-3);
 }
 
-.m-b-4 {
+.mb-4 {
     margin-bottom: var(--spacing-4);
 }
 
-.m-b-5 {
+.mb-5 {
     margin-bottom: var(--spacing-5);
 }
 
-.m-b-6 {
+.mb-6 {
     margin-bottom: var(--spacing-6);
 }
 
-.m-b-8 {
+.mb-8 {
     margin-bottom: var(--spacing-8);
 }
 
-.m-b-10 {
+.mb-10 {
     margin-bottom: var(--spacing-10);
 }
 
-.m-b-12 {
+.mb-12 {
     margin-bottom: var(--spacing-12);
 }
 
-.m-b-16 {
+.mb-16 {
     margin-bottom: var(--spacing-16);
 }
 
-.m-b-20 {
+.mb-20 {
     margin-bottom: var(--spacing-20);
 }
 
-.m-b-24 {
+.mb-24 {
     margin-bottom: var(--spacing-24);
 }
 
-.m-b-32 {
+.mb-32 {
     margin-bottom: var(--spacing-32);
 }
 
 /* Margin start (left in LTR, right in RTL) */
-.m-s-0 {
+.ms-0 {
     margin-inline-start: var(--spacing-0);
 }
 
-.m-s-1 {
+.ms-1 {
     margin-inline-start: var(--spacing-1);
 }
 
-.m-s-2 {
+.ms-2 {
     margin-inline-start: var(--spacing-2);
 }
 
-.m-s-3 {
+.ms-3 {
     margin-inline-start: var(--spacing-3);
 }
 
-.m-s-4 {
+.ms-4 {
     margin-inline-start: var(--spacing-4);
 }
 
-.m-s-5 {
+.ms-5 {
     margin-inline-start: var(--spacing-5);
 }
 
-.m-s-6 {
+.ms-6 {
     margin-inline-start: var(--spacing-6);
 }
 
-.m-s-8 {
+.ms-8 {
     margin-inline-start: var(--spacing-8);
 }
 
-.m-s-10 {
+.ms-10 {
     margin-inline-start: var(--spacing-10);
 }
 
-.m-s-12 {
+.ms-12 {
     margin-inline-start: var(--spacing-12);
 }
 
-.m-s-16 {
+.ms-16 {
     margin-inline-start: var(--spacing-16);
 }
 
-.m-s-20 {
+.ms-20 {
     margin-inline-start: var(--spacing-20);
 }
 
-.m-s-24 {
+.ms-24 {
     margin-inline-start: var(--spacing-24);
 }
 
-.m-s-32 {
+.ms-32 {
     margin-inline-start: var(--spacing-32);
 }
 
 /* Margin end (right in LTR, left in RTL) */
-.m-e-0 {
+.me-0 {
     margin-inline-end: var(--spacing-0);
 }
 
-.m-e-1 {
+.me-1 {
     margin-inline-end: var(--spacing-1);
 }
 
-.m-e-2 {
+.me-2 {
     margin-inline-end: var(--spacing-2);
 }
 
-.m-e-3 {
+.me-3 {
     margin-inline-end: var(--spacing-3);
 }
 
-.m-e-4 {
+.me-4 {
     margin-inline-end: var(--spacing-4);
 }
 
-.m-e-5 {
+.me-5 {
     margin-inline-end: var(--spacing-5);
 }
 
-.m-e-6 {
+.me-6 {
     margin-inline-end: var(--spacing-6);
 }
 
-.m-e-8 {
+.me-8 {
     margin-inline-end: var(--spacing-8);
 }
 
-.m-e-10 {
+.me-10 {
     margin-inline-end: var(--spacing-10);
 }
 
-.m-e-12 {
+.me-12 {
     margin-inline-end: var(--spacing-12);
 }
 
-.m-e-16 {
+.me-16 {
     margin-inline-end: var(--spacing-16);
 }
 
-.m-e-20 {
+.me-20 {
     margin-inline-end: var(--spacing-20);
 }
 
-.m-e-24 {
+.me-24 {
     margin-inline-end: var(--spacing-24);
 }
 
-.m-e-32 {
+.me-32 {
     margin-inline-end: var(--spacing-32);
 }
 
 /* Margin x-axis (start and end) */
-.m-x-0 {
+.mx-0 {
     margin-inline: var(--spacing-0);
 }
 
-.m-x-1 {
+.mx-1 {
     margin-inline: var(--spacing-1);
 }
 
-.m-x-2 {
+.mx-2 {
     margin-inline: var(--spacing-2);
 }
 
-.m-x-3 {
+.mx-3 {
     margin-inline: var(--spacing-3);
 }
 
-.m-x-4 {
+.mx-4 {
     margin-inline: var(--spacing-4);
 }
 
-.m-x-5 {
+.mx-5 {
     margin-inline: var(--spacing-5);
 }
 
-.m-x-6 {
+.mx-6 {
     margin-inline: var(--spacing-6);
 }
 
-.m-x-8 {
+.mx-8 {
     margin-inline: var(--spacing-8);
 }
 
-.m-x-10 {
+.mx-10 {
     margin-inline: var(--spacing-10);
 }
 
-.m-x-12 {
+.mx-12 {
     margin-inline: var(--spacing-12);
 }
 
-.m-x-16 {
+.mx-16 {
     margin-inline: var(--spacing-16);
 }
 
-.m-x-20 {
+.mx-20 {
     margin-inline: var(--spacing-20);
 }
 
-.m-x-24 {
+.mx-24 {
     margin-inline: var(--spacing-24);
 }
 
-.m-x-32 {
+.mx-32 {
     margin-inline: var(--spacing-32);
 }
 
 /* Margin y-axis (top and bottom) */
-.m-y-0 {
+.my-0 {
     margin-block: var(--spacing-0);
 }
 
-.m-y-1 {
+.my-1 {
     margin-block: var(--spacing-1);
 }
 
-.m-y-2 {
+.my-2 {
     margin-block: var(--spacing-2);
 }
 
-.m-y-3 {
+.my-3 {
     margin-block: var(--spacing-3);
 }
 
-.m-y-4 {
+.my-4 {
     margin-block: var(--spacing-4);
 }
 
-.m-y-5 {
+.my-5 {
     margin-block: var(--spacing-5);
 }
 
-.m-y-6 {
+.my-6 {
     margin-block: var(--spacing-6);
 }
 
-.m-y-8 {
+.my-8 {
     margin-block: var(--spacing-8);
 }
 
-.m-y-10 {
+.my-10 {
     margin-block: var(--spacing-10);
 }
 
-.m-y-12 {
+.my-12 {
     margin-block: var(--spacing-12);
 }
 
-.m-y-16 {
+.my-16 {
     margin-block: var(--spacing-16);
 }
 
-.m-y-20 {
+.my-20 {
     margin-block: var(--spacing-20);
 }
 
-.m-y-24 {
+.my-24 {
     margin-block: var(--spacing-24);
 }
 
-.m-y-32 {
+.my-32 {
     margin-block: var(--spacing-32);
 }
 
@@ -503,357 +503,357 @@
 }
 
 /* Padding top */
-.p-t-0 {
+.pt-0 {
     padding-top: var(--spacing-0);
 }
 
-.p-t-1 {
+.pt-1 {
     padding-top: var(--spacing-1);
 }
 
-.p-t-2 {
+.pt-2 {
     padding-top: var(--spacing-2);
 }
 
-.p-t-3 {
+.pt-3 {
     padding-top: var(--spacing-3);
 }
 
-.p-t-4 {
+.pt-4 {
     padding-top: var(--spacing-4);
 }
 
-.p-t-5 {
+.pt-5 {
     padding-top: var(--spacing-5);
 }
 
-.p-t-6 {
+.pt-6 {
     padding-top: var(--spacing-6);
 }
 
-.p-t-8 {
+.pt-8 {
     padding-top: var(--spacing-8);
 }
 
-.p-t-10 {
+.pt-10 {
     padding-top: var(--spacing-10);
 }
 
-.p-t-12 {
+.pt-12 {
     padding-top: var(--spacing-12);
 }
 
-.p-t-16 {
+.pt-16 {
     padding-top: var(--spacing-16);
 }
 
-.p-t-20 {
+.pt-20 {
     padding-top: var(--spacing-20);
 }
 
-.p-t-24 {
+.pt-24 {
     padding-top: var(--spacing-24);
 }
 
-.p-t-32 {
+.pt-32 {
     padding-top: var(--spacing-32);
 }
 
 /* Padding bottom */
-.p-b-0 {
+.pb-0 {
     padding-bottom: var(--spacing-0);
 }
 
-.p-b-1 {
+.pb-1 {
     padding-bottom: var(--spacing-1);
 }
 
-.p-b-2 {
+.pb-2 {
     padding-bottom: var(--spacing-2);
 }
 
-.p-b-3 {
+.pb-3 {
     padding-bottom: var(--spacing-3);
 }
 
-.p-b-4 {
+.pb-4 {
     padding-bottom: var(--spacing-4);
 }
 
-.p-b-5 {
+.pb-5 {
     padding-bottom: var(--spacing-5);
 }
 
-.p-b-6 {
+.pb-6 {
     padding-bottom: var(--spacing-6);
 }
 
-.p-b-8 {
+.pb-8 {
     padding-bottom: var(--spacing-8);
 }
 
-.p-b-10 {
+.pb-10 {
     padding-bottom: var(--spacing-10);
 }
 
-.p-b-12 {
+.pb-12 {
     padding-bottom: var(--spacing-12);
 }
 
-.p-b-16 {
+.pb-16 {
     padding-bottom: var(--spacing-16);
 }
 
-.p-b-20 {
+.pb-20 {
     padding-bottom: var(--spacing-20);
 }
 
-.p-b-24 {
+.pb-24 {
     padding-bottom: var(--spacing-24);
 }
 
-.p-b-32 {
+.pb-32 {
     padding-bottom: var(--spacing-32);
 }
 
 /* Padding start (left in LTR, right in RTL) */
-.p-s-0 {
+.ps-0 {
     padding-inline-start: var(--spacing-0);
 }
 
-.p-s-1 {
+.ps-1 {
     padding-inline-start: var(--spacing-1);
 }
 
-.p-s-2 {
+.ps-2 {
     padding-inline-start: var(--spacing-2);
 }
 
-.p-s-3 {
+.ps-3 {
     padding-inline-start: var(--spacing-3);
 }
 
-.p-s-4 {
+.ps-4 {
     padding-inline-start: var(--spacing-4);
 }
 
-.p-s-5 {
+.ps-5 {
     padding-inline-start: var(--spacing-5);
 }
 
-.p-s-6 {
+.ps-6 {
     padding-inline-start: var(--spacing-6);
 }
 
-.p-s-8 {
+.ps-8 {
     padding-inline-start: var(--spacing-8);
 }
 
-.p-s-10 {
+.ps-10 {
     padding-inline-start: var(--spacing-10);
 }
 
-.p-s-12 {
+.ps-12 {
     padding-inline-start: var(--spacing-12);
 }
 
-.p-s-16 {
+.ps-16 {
     padding-inline-start: var(--spacing-16);
 }
 
-.p-s-20 {
+.ps-20 {
     padding-inline-start: var(--spacing-20);
 }
 
-.p-s-24 {
+.ps-24 {
     padding-inline-start: var(--spacing-24);
 }
 
-.p-s-32 {
+.ps-32 {
     padding-inline-start: var(--spacing-32);
 }
 
 /* Padding end (right in LTR, left in RTL) */
-.p-e-0 {
+.pe-0 {
     padding-inline-end: var(--spacing-0);
 }
 
-.p-e-1 {
+.pe-1 {
     padding-inline-end: var(--spacing-1);
 }
 
-.p-e-2 {
+.pe-2 {
     padding-inline-end: var(--spacing-2);
 }
 
-.p-e-3 {
+.pe-3 {
     padding-inline-end: var(--spacing-3);
 }
 
-.p-e-4 {
+.pe-4 {
     padding-inline-end: var(--spacing-4);
 }
 
-.p-e-5 {
+.pe-5 {
     padding-inline-end: var(--spacing-5);
 }
 
-.p-e-6 {
+.pe-6 {
     padding-inline-end: var(--spacing-6);
 }
 
-.p-e-8 {
+.pe-8 {
     padding-inline-end: var(--spacing-8);
 }
 
-.p-e-10 {
+.pe-10 {
     padding-inline-end: var(--spacing-10);
 }
 
-.p-e-12 {
+.pe-12 {
     padding-inline-end: var(--spacing-12);
 }
 
-.p-e-16 {
+.pe-16 {
     padding-inline-end: var(--spacing-16);
 }
 
-.p-e-20 {
+.pe-20 {
     padding-inline-end: var(--spacing-20);
 }
 
-.p-e-24 {
+.pe-24 {
     padding-inline-end: var(--spacing-24);
 }
 
-.p-e-32 {
+.pe-32 {
     padding-inline-end: var(--spacing-32);
 }
 
 /* Padding x-axis (start and end) */
-.p-x-0 {
+.px-0 {
     padding-inline: var(--spacing-0);
 }
 
-.p-x-1 {
+.px-1 {
     padding-inline: var(--spacing-1);
 }
 
-.p-x-2 {
+.px-2 {
     padding-inline: var(--spacing-2);
 }
 
-.p-x-3 {
+.px-3 {
     padding-inline: var(--spacing-3);
 }
 
-.p-x-4 {
+.px-4 {
     padding-inline: var(--spacing-4);
 }
 
-.p-x-5 {
+.px-5 {
     padding-inline: var(--spacing-5);
 }
 
-.p-x-6 {
+.px-6 {
     padding-inline: var(--spacing-6);
 }
 
-.p-x-8 {
+.px-8 {
     padding-inline: var(--spacing-8);
 }
 
-.p-x-10 {
+.px-10 {
     padding-inline: var(--spacing-10);
 }
 
-.p-x-12 {
+.px-12 {
     padding-inline: var(--spacing-12);
 }
 
-.p-x-16 {
+.px-16 {
     padding-inline: var(--spacing-16);
 }
 
-.p-x-20 {
+.px-20 {
     padding-inline: var(--spacing-20);
 }
 
-.p-x-24 {
+.px-24 {
     padding-inline: var(--spacing-24);
 }
 
-.p-x-32 {
+.px-32 {
     padding-inline: var(--spacing-32);
 }
 
 /* Padding y-axis (top and bottom) */
-.p-y-0 {
+.py-0 {
     padding-block: var(--spacing-0);
 }
 
-.p-y-1 {
+.py-1 {
     padding-block: var(--spacing-1);
 }
 
-.p-y-2 {
+.py-2 {
     padding-block: var(--spacing-2);
 }
 
-.p-y-3 {
+.py-3 {
     padding-block: var(--spacing-3);
 }
 
-.p-y-4 {
+.py-4 {
     padding-block: var(--spacing-4);
 }
 
-.p-y-5 {
+.py-5 {
     padding-block: var(--spacing-5);
 }
 
-.p-y-6 {
+.py-6 {
     padding-block: var(--spacing-6);
 }
 
-.p-y-8 {
+.py-8 {
     padding-block: var(--spacing-8);
 }
 
-.p-y-10 {
+.py-10 {
     padding-block: var(--spacing-10);
 }
 
-.p-y-12 {
+.py-12 {
     padding-block: var(--spacing-12);
 }
 
-.p-y-16 {
+.py-16 {
     padding-block: var(--spacing-16);
 }
 
-.p-y-20 {
+.py-20 {
     padding-block: var(--spacing-20);
 }
 
-.p-y-24 {
+.py-24 {
     padding-block: var(--spacing-24);
 }
 
-.p-y-32 {
+.py-32 {
     padding-block: var(--spacing-32);
 }
 
 /* AUTO VALUES for centering */
-.m-x-auto {
+.mx-auto {
     margin-inline: auto;
 }
 
-.m-s-auto {
+.ms-auto {
     margin-inline-start: auto;
 }
 
-.m-e-auto {
+.me-auto {
     margin-inline-end: auto;
 }
 
