--- a/work_phase_4/css/reset.css
+++ b/work_phase_4/css/reset.css
@@ -298,7 +298,7 @@ input[type="number"] {
 }
 
 /* Reset webkit scrollbars */
-::-webkit-scrollbar {
+/* ::-webkit-scrollbar {
     width: auto;
     height: auto;
 }
@@ -309,7 +309,7 @@ input[type="number"] {
 
 ::-webkit-scrollbar-thumb {
     background: transparent;
-}
+} */
 
 /* Reset webkit tap highlight */
 /* * {
