--- a/work_phase_4/css/base.css
+++ b/work_phase_4/css/base.css
@@ -29,7 +29,7 @@ h5 {
 }
 
 h1 {
-    font-size: clamp(2rem, 5vw + 1rem, 4rem);
+    font-size: 4rem;
     color: var(--primary-color);
     font-weight: 700;
 }
