feat: card component

--- a/work_phase_4/css/components.css
+++ b/work_phase_4/css/components.css
@@ -1,2 +1,3 @@
 @import url("./component_skeletons/navbar.css");
 @import url("./component_skeletons/button.css");
+@import url("./component_skeletons/card.css");
