--- a/work_phase_4/css/page_css/home_page.css
+++ b/work_phase_4/css/page_css/home_page.css
@@ -2,8 +2,6 @@
     background-color: var(--background-color);
     min-height: 100vh;
     display: flex;
-    align-items: center;
-    padding-bottom: calc(1.5rem + 70px);
 }
 
 .hero-container {
@@ -12,12 +10,12 @@
     display: flex;
     flex-direction: column;
     gap: 0;
+    height: 100%;
 }
 
 .hero-content {
     padding: 3rem 1.5rem;
     order: 2;
-    background-color: var(--accent-bg);
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -102,14 +100,11 @@
 }
 
 @media (min-width: 768px) {
-    .hero {
-        padding-bottom: 2rem;
-    }
+
 
     .hero-container {
         flex-direction: row;
-        min-height: calc(100vh - 65px);
-        gap: 0;
+        min-height: 100vh;
     }
 
     .hero-content {
@@ -120,7 +115,6 @@
         flex-direction: column;
         justify-content: center;
         align-items: flex-start;
-        background-color: var(--accent-bg);
     }
 
     .hero-text {
@@ -183,7 +177,7 @@
 @media (min-width: 1200px) {
     .hero-content {
         flex: 0 0 42%;
-        padding: 4.5rem 3.5rem;
+        padding: 6.5rem 3.5rem;
     }
 
     .hero-text {
