--- a/work_phase_4/css/page_css/home_page.css
+++ b/work_phase_4/css/page_css/home_page.css
@@ -205,13 +205,8 @@
 
 .highlights {
     background-color: var(--background-color);
-    padding: 3rem 1rem;
+    padding: 3rem 0;
     padding-bottom: calc(3rem + 70px);
-}
-
-.highlights-container {
-    max-width: 1200px;
-    margin: 0 auto;
 }
 
 .highlights-header {
@@ -252,28 +247,12 @@
 
 @media (min-width: 768px) {
     .highlights {
-        padding: 4rem 2rem;
+        padding: 4rem 0;
         padding-bottom: 4rem;
     }
 
     .highlights-grid {
         grid-template-columns: repeat(3, 1fr);
         gap: 2rem;
-    }
-}
-
-@media (min-width: 1024px) {
-    .highlights {
-        padding: 5rem 3rem;
-    }
-
-    .highlights-grid {
-        gap: 2.5rem;
-    }
-}
-
-@media (min-width: 1440px) {
-    .highlights {
-        padding: 6rem 4rem;
     }
 }
