feat: timeline post

--- a/work_phase_4/css/base.css
+++ b/work_phase_4/css/base.css
@@ -5,6 +5,7 @@
     --secondary-color: #B85C1F;
     --accent-color: #A52A2A;
     --accent-bg: #FFE5D0;
+    --border-color: #E5D5C4;
 
     --text-color: #1A1410;
     --text-on-dark: #FFFFFF;
