--- a/work_phase_4/css/component_skeletons/button.css
+++ b/work_phase_4/css/component_skeletons/button.css
@@ -10,12 +10,12 @@
 }
 
 .button-primary {
-    background-color: var(--secondary-color);
+    background-color: var(--primary-color);
     color: white;
 }
 
 .button-secondary {
-    background-color: var(--accent-color);
+    background-color: var(--secondary-color);
     color: white;
 }
 
