--- a/work_phase_4/css/components.css
+++ b/work_phase_4/css/components.css
@@ -1,3 +1,8 @@
 @import url("./component_skeletons/navbar.css");
 @import url("./component_skeletons/button.css");
 @import url("./component_skeletons/card.css");
+@import url("./component_skeletons/timeline.css");
+@import url("./component_skeletons/search-bar.css");
+@import url("./component_skeletons/sidebar.css");
+@import url("./component_skeletons/filter-button.css");
+@import url("./component_skeletons/crumbs-control.css");
