feat: add profile and friend reccommendation

--- a/work_phase_4/css/component_skeletons/button.css
+++ b/work_phase_4/css/component_skeletons/button.css
@@ -9,6 +9,11 @@
     text-decoration: none;
 }
 
+.small-button {
+    padding: 6px 12px;
+
+}
+
 .button-primary {
     background-color: var(--primary-color);
     color: white;
