--- a/work_phase_4/css/components.css
+++ b/work_phase_4/css/components.css
@@ -6,3 +6,4 @@
 @import url("./component_skeletons/sidebar.css");
 @import url("./component_skeletons/filter-button.css");
 @import url("./component_skeletons/crumbs-control.css");
+@import url("./component_skeletons/profile-card.css");
