feat: add map-actions

--- a/work_phase_4/css/page_css/crumbs_map.css
+++ b/work_phase_4/css/page_css/crumbs_map.css
@@ -94,3 +94,9 @@
     flex-direction: column;
     gap: var(--spacing-2);
 }
+
+.map-actions {
+    display: flex;
+    flex-direction: column;
+    gap: var(--spacing-2);
+}
