--- a/work_phase_4/css/page_css/crumbs_map.css
+++ b/work_phase_4/css/page_css/crumbs_map.css
@@ -100,3 +100,12 @@
     flex-direction: column;
     gap: var(--spacing-2);
 }
+
+
+.sidebar-toggle {
+    top: 205px;
+}
+
+.sidebar-toggle.active {
+    top: 28px;
+}
