feat: modal component

--- a/work_phase_4/css/components.css
+++ b/work_phase_4/css/components.css
@@ -8,3 +8,5 @@
 @import url("./component_skeletons/crumbs-control.css");
 @import url("./component_skeletons/profile-card.css");
 @import url("./component_skeletons/toggle-switch.css");
+@import url("./component_skeletons/modal.css");
+@import url("./component_skeletons/form.css");
