feat: .crumb-form styling

--- a/work_phase_4/css/page_css/feed_crumbs.css
+++ b/work_phase_4/css/page_css/feed_crumbs.css
@@ -104,3 +104,13 @@
 .ranking-item:hover {
     background-color: var(--background-color);
 }
+
+.crumb-form {
+    padding: 20px;
+}
+
+@media (min-width: 768px) {
+    .crumb-form {
+        padding: 24px;
+    }
+}
