--- a/work_phase_4/css/components.css
+++ b/work_phase_4/css/components.css
@@ -10,3 +10,4 @@
 @import url("./component_skeletons/toggle-switch.css");
 @import url("./component_skeletons/modal.css");
 @import url("./component_skeletons/form.css");
+@import url("./component_skeletons/footer.css");
