--- a/work_phase_4/css/components.css
+++ b/work_phase_4/css/components.css
@@ -11,3 +11,4 @@
 @import url("./component_skeletons/modal.css");
 @import url("./component_skeletons/form.css");
 @import url("./component_skeletons/footer.css");
+@import url("./component_skeletons/header.css");
