--- a/work_phase_4/css/page_css/home_page.css
+++ b/work_phase_4/css/page_css/home_page.css
@@ -4,6 +4,11 @@
     display: flex;
 }
 
+.btn-learn-more {
+    margin-top: 1rem;
+    align-self: flex-start;
+}
+
 .hero-container {
     width: 100%;
     margin: 0;
