--- a/work_phase_4/css/components.css
+++ b/work_phase_4/css/components.css
@@ -12,3 +12,4 @@
 @import url("./component_skeletons/form.css");
 @import url("./component_skeletons/footer.css");
 @import url("./component_skeletons/header.css");
+@import url("./component_skeletons/newsletter-form.css");
