feat: init implementation rationale page

--- a/work_phase_4/css/components.css
+++ b/work_phase_4/css/components.css
@@ -13,3 +13,4 @@
 @import url("./component_skeletons/footer.css");
 @import url("./component_skeletons/header.css");
 @import url("./component_skeletons/newsletter-form.css");
+@import url("./component_skeletons/accordion.css");
