--- a/work_phase_4/css/component_skeletons/form.css
+++ b/work_phase_4/css/component_skeletons/form.css
@@ -156,6 +156,18 @@
     flex: 1;
 }
 
+.visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    padding: 0;
+    margin: -1px;
+    overflow: hidden;
+    clip: rect(0, 0, 0, 0);
+    white-space: nowrap;
+    border: 0;
+}
+
 
 @media (min-width: 768px) {
     .form-group {
