feat: implementation rationale

--- a/work_phase_4/css/layout.css
+++ b/work_phase_4/css/layout.css
@@ -917,6 +917,11 @@
     margin-inline-end: auto;
 }
 
+.small-image {
+    width: 650px;
+    height: auto;
+}
+
 .debug {
     border: 1px solid red;
 }
