--- a/work_phase_4/css/page_css/crumbs_map.css
+++ b/work_phase_4/css/page_css/crumbs_map.css
@@ -26,6 +26,7 @@
 .control-section-title {
     color: var(--primary-color);
     margin-bottom: var(--spacing-3);
+
 }
 
 .basemap-options {
@@ -99,6 +100,7 @@
     display: flex;
     flex-direction: column;
     gap: var(--spacing-2);
+    padding-bottom: 70px
 }
 
 
@@ -108,4 +110,10 @@
 
 .sidebar-toggle.active {
     top: 28px;
+}
+
+@media (min-width: 768px) {
+    .map-actions {
+        padding-bottom: 0
+    }
 }
